# Causal-Uplift-Transformer-Beam

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements-serving.txt  requirements.txt  sample_batch.csv
.github/workflows/: ci.yml  cloud-run-deploy.yml  docker.yml
.streamlit/: config.toml
app/: api_client.py  charts.py  components.py  sample_inputs.py  streamlit_app.py
artifacts/data/: criteo_data_profile.json  criteo_sample_preview.csv  data_manifest.json
artifacts/data/full/: criteo_data_profile.json  criteo_sample_preview.csv  data_manifest.json
artifacts/data/percent10/: criteo_schema.json  data_manifest.json
artifacts/reports/: best_model_summary.json  experiment_manifest.json  model_ranking.csv  model_ranking.json
artifacts/reports/full/: best_model_summary.json  champion_challenger_summary.json  experiment_manifest.json  model_ranking.csv  model_ranking.json
artifacts/reports/percent10/: best_model_summary.json  champion_challenger_summary.json  experiment_manifest.json  model_ranking.csv  model_ranking.json
artifacts/tuning/full/: best_params.json  optuna_trials.csv  tuning_summary.json
artifacts/tuning/percent10/: best_params.json  optuna_trials.csv  tuning_summary.json
cloudrun/: service.yaml
configs/: training.yaml  training_causal_ft.yaml  training_causal_ft_full.yaml  training_full.yaml  tuning.yaml  tuning_full.yaml
docs/: data_card.md  gcp_deployment.md  github_profile_snippet.md  streamlit_deployment.md
models/production/: champion_model.joblib  example_request.json  feature_schema.json  model_metadata.json  prediction_contract.json  preprocessor.joblib
scripts/: build_inference_bundle.py  check_production_bundle.py  verify_environment.py
src/causal_uplift/: baselines.py  bundle.py  causal_losses.py  causal_transformer.py  champion.py  config.py  data.py  data_profile.py  evaluate.py  mlflow_utils.py  plots.py  preprocessing.py  reporting.py  schemas.py  search_space.py  serve.py  train.py  transformer.py  tuning.py
tests/: test_api_contract.py  test_app_api_client.py  test_app_contract.py  test_causal_losses.py  test_causal_transformer_shapes.py  test_champion_selection.py  test_data_contract.py  test_data_materialization.py  test_data_profile.py  test_dataset_variants.py  test_inference_bundle.py  test_plot_generation.py  test_production_bundle_contract.py  test_reporting_contract.py  test_search_space.py  test_serve_contract.py  test_smoke_imports.py  test_training_config.py  test_transformer_shapes.py  test_tuning_contract.py
